force-app/main/default/objects/Krow__Vendor_Additional_Item__c/Krow__Vendor_Additional_Item__c.object-meta.xml
<CustomObject>
    <label>Vendor Additional Item</label>
    <nameField>
        <displayFormat>VAI{000000}</displayFormat>
        <label>Vendor Additional Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Additional Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>