force-app/main/default/objects/Krow__Vendor_Additional_Item__c/fields/Krow__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Krow__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Vendor Additional Items</relationshipLabel>
    <relationshipName>Vendor_Additional_Items</relationshipName>
    <type>Lookup</type>
</CustomField>