force-app/main/default/objects/Krow__Vendor_Additional_Item__c/fields/Krow__Product__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Vendor Additional Items</relationshipLabel>
    <relationshipName>Vendor_Additional_Items</relationshipName>
    <type>Lookup</type>
</CustomField>