force-app/main/default/objects/Krow__Vendor_Additional_Item__c/fields/Krow__Vendor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor_Invoice__c</fullName>
    <label>Vendor Invoice</label>
    <referenceTo>Krow__Vendor_Payment__c</referenceTo>
    <relationshipLabel>Vendor Additional Items</relationshipLabel>
    <relationshipName>Vendor_Additional_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>